Temporarily make border for inserted cells invisible, while fixing.

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -94,7 +94,7 @@ div.selected-cell-border {
 div.cells-for-insertion-border {
   position: absolute;
   display: block;
-  border: 3px dashed orange;
+  /*border: 3px dashed orange;*/
   pointer-events: none;
 }
 
